--- a/gallery.html
+++ b/gallery.html
@@ -16,7 +16,7 @@
 <body>
 <div class="hero">
     <nav>
-        <h2 class="logo"><a href="index.html">Sahith<span>Reddy</span></a></h2>
+        <h2 class="logo"><a href="index.html">Sahith</a></h2>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
